--- a/index_web.html
+++ b/index_web.html
@@ -29,6 +29,6 @@
     <!-- PapaParse Library for parsing CSV -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <!-- Custom JavaScript -->
-    <script src="app.js"></script>
+    <script src="app_web.js"></script>
 </body>
 </html>
